Fix banding when rendering canvas in HDR mode

Set the proper 16-bit RGBA texture format for the canvas FBO when HDR
rendering mode is active.

BUG: 445672
(cherry picked from commit 782fc72d7aa66656db6a1c28c983025a9b5e17e1)